<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_background"
    tools:context=".activity.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_weight=".5"
                android:contentDescription="@string/description_app_logo"
                android:src="@mipmap/logo_transparent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Schulerz"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_big"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_edit_text"
                android:paddingRight="@dimen/padding_edit_text">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_between_edit_text"
                    android:fontFamily="sans-serif-normal"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_normal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_edit_text"
                android:paddingRight="@dimen/padding_edit_text">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_between_edit_text"
                    android:fontFamily="sans-serif-normal"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="Login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_normal" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_button_horizontal"
                android:background="@drawable/bg_btn_add_student"
                android:fontFamily="sans-serif-normal"
                android:text="@string/action_Login"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/textViewRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-normal"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/noAccountYet"
                android:textColor="@color/colorOffWhite"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/textViewForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/forgotPassword"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/text_size_small"
                android:visibility="invisible" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AA000000"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authenticating"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_normal" />

    </LinearLayout>

</FrameLayout>
