<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_background"
    android:orientation="vertical"
    tools:context=".activity.AddStudent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_edit_text"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_edit_text"
                    android:paddingRight="@dimen/padding_edit_text">

                    <EditText
                        android:id="@+id/editTextStudentName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_between_edit_text"
                        android:drawableLeft="@mipmap/studentet"
                        android:drawablePadding="10dp"
                        android:drawableStart="@mipmap/studentet"
                        android:hint="@string/student_name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_size_normal" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_edit_text"
                    android:paddingRight="@dimen/padding_edit_text">

                    <EditText
                        android:id="@+id/editTextDOB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_between_edit_text"
                        android:drawableLeft="@mipmap/bodet"
                        android:drawablePadding="10dp"
                        android:drawableStart="@mipmap/bodet"
                        android:hint="@string/date_of_birth"
                        android:inputType="date"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_size_normal" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_edit_text"
                    android:paddingRight="@dimen/padding_edit_text">

                    <EditText
                        android:id="@+id/editTextFathersName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_between_edit_text"
                        android:drawableLeft="@mipmap/fatheret"
                        android:drawablePadding="10dp"
                        android:drawableStart="@mipmap/fatheret"
                        android:hint="@string/fathers_name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_size_normal" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_edit_text"
                    android:paddingRight="@dimen/padding_edit_text">

                    <EditText
                        android:id="@+id/editTextMothersName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_between_edit_text"
                        android:drawableLeft="@mipmap/motheret"
                        android:drawablePadding="10dp"
                        android:drawableStart="@mipmap/motheret"
                        android:fontFamily="sans-serif-normal"
                        android:hint="@string/mothers_name"
                        android:imeActionId="@+id/editTextadd"
                        android:imeActionLabel="Add"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_size_normal" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/buttonAddStudent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_button_horizontal"
                    android:background="@drawable/bg_btn_add_student"
                    android:fontFamily="sans-serif-normal"
                    android:text="@string/add_student"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_normal" />

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayoutProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#AA000000"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verifying"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_normal" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>
